# Tone-and-Beats-by-Hostility

./: .github_release_notes.md  .gitignore  ASSET_MANAGEMENT.md  AUDIT_COMPLETE.md  AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  AudioAnalyzer.csproj  CHANGELOG.md  CMakeLists.txt  CONTEXT_HUB.md  CONTRIBUTING.md  Code_Audit_Report.md  DEMO_SCRIPT.ps1  DOCUMENTACION.md  INICIO_RAPIDO.md  INSTRUCCIONES_EJECUCION_TEST.md  JOURNAL.md  LICENSE  LICENSE.md  LICENSE.txt  LICENSES.md  MANUAL_DE_RITUALES.md  MainWindow.xaml  MainWindow.xaml.cs  NEXT_VERSION.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_TEST.md  README.md  RELEASE.md  RELEASE_NOTES_v1.0.5.md  REPORTE_TECNICO_BPM_DETECTION.md  REPORTE_V1.0.7_SPECTRALFLUX.md  REPORTE_V1.0.8_BANDLIMITED_ADAPTIVE.md  REPORTE_V1.0.9_GUARDIA_DE_PULSO.md  RESULTADOS_TEST_BPM.csv  RESULTADO_11000HZ_TEST.txt  RESULTADO_8000HZ_ORIGINAL.txt  RESULTADO_FINAL_V3.txt  RESUMEN_EJECUCION_V3.md  (+10 more)
.github/workflows/: macos-build.yml
.obsidian/: workspace.json
.opencode/plans/: AUDIT_FIXES.md
Assets/: README.md
BpmTest/: BpmTest.csproj  Program.cs  propTest.cs  testMedia.cs
Controls/: WaveformControl.xaml.cs
Installers/: tone_and_beats_installer.iss  version_info.iss
Interfaces/: IKeyDetectorService.cs  IWaveformAnalyzerService.cs
Models/: AnalysisResult.cs  AudioFileInfo.cs
Services/: BpmDetector.cs  LoggerService.cs  MetadataWriter.cs
Source/: BpmTestHarness.cpp  Main.cpp  MainComponent.cpp  MainComponent.h
Source/Core/: AudioDataProvider.cpp  AudioDataProvider.h  BpmDetector.cpp  BpmDetector.h  Constants.h  DspUtils.cpp  DspUtils.h  KeyDetector.cpp  KeyDetector.h  Loudness.cpp  Loudness.h  Metadata.cpp  Metadata.h  ScalePlayerSource.cpp  ScalePlayerSource.h  UpdateManager.cpp  UpdateManager.h  WaveformData.cpp  WaveformData.h
Source/UI/: LookAndFeel.cpp  LookAndFeel.h  PianoScaleView.cpp  PianoScaleView.h  WaveformView.cpp  WaveformView.h
Themes/: BlueTheme.xaml  LightTheme.xaml  ThemeManager.cs
ViewModels/: MainViewModel.cs
backups/backup_pre_rebuild_20260410_155548/installer/: setup.iss
backups/backup_pre_rebuild_20260410_155548/src/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml.cs  AssemblyInfo.cs  AudioAnalyzer.sln  MainWindow.xaml.cs
backups/backup_pre_rebuild_20260410_155548/src/AudioAnalyzer.PerfTest/: AudioAnalyzer.PerfTest.csproj
backups/backup_pre_rebuild_20260410_155548/src/Commands/: RelayCommand.cs
backups/backup_pre_rebuild_20260410_155548/src/Helpers/: EmbeddedResourceHelper.cs
backups/backup_pre_rebuild_20260410_155548/src/Infrastructure/: BoolToVisibilityConverter.cs  FilePickerService.cs
backups/backup_pre_rebuild_20260410_155548/src/Interfaces/: IFilePickerService.cs  IMessageBoxService.cs  IWaveformAnalyzerService.cs
backups/backup_pre_rebuild_20260410_155548/src/Models/: LoudnessResult.cs  WaveformData.cs
backups/backup_pre_rebuild_20260410_155548/src/Services/: AudioDataProvider.cs  AudioPlayerService.cs  AudioReaderFactory.cs  LoudnessAnalyzer.cs  MetadataWriter.cs
backups/backup_pre_rebuild_20260410_155548/src/Themes/: BlueTheme.xaml  IosDarkTheme.xaml
docs/: ARCHITECTURE.md  BPM_DETECTION_REPORT.md  BpmStatusReport.md  BpmTestReportSpecialist.md  DOCUMENTACION.md  GRID_DETECTION_CONFIGURATION.md  JUCE_Architecture_Plan.md  Key_Detection_Module_Report.md  LICENSES.md
installer/: setup.iss
modules/libebur128/: CMakeLists.txt
modules/soundtouch/source/Android-lib/: .project
scripts/: BUILD.md
src/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  AssemblyInfo.cs  AudioAnalyzer.csproj  HUB_UI.md  MainWindow.xaml  MainWindow.xaml.cs
src/AudioAnalyzer.PerfTest/: Program.cs
src/Controls/: WaveformControl.xaml  WaveformControl.xaml.cs
src/Infrastructure/: CornerResizeBehavior.cs  LevelToBrushConverter.cs  MessageBoxService.cs  StringToVisibilityConverter.cs  ViewModelBase.cs
src/Interfaces/: IAudioAnalysisPipeline.cs  IAudioPlayerService.cs  IBpmDetectorService.cs  IKeyDetectorService.cs  ILoudnessAnalyzerService.cs  IWaveformAnalyzerService.cs
src/Models/: LoudnessResult.cs
src/Services/: AudioAnalysisPipeline.cs  AudioPlayerService.cs  BpmConstants.cs  BpmDetector.cs  DspConstants.cs  FftHelper.cs  HUB_SERVICES.md  KeyDetector.cs  LoggerService.cs  LoudnessAnalyzer.cs  MetadataWriter.cs  WaveformAnalyzer.cs
src/Themes/: BlueTheme.xaml  DarkTheme.xaml  IosDarkTheme.xaml  IosLightTheme.xaml  LightTheme.xaml  ThemeManager.cs
src/ViewModels/: MainViewModel.cs
src/publish-debug/: ToneAndBeatsByHostility.deps.json
src/publish-debug/runtimes/opensuse.15.4-x64/native/: libzen.so.0
src/publish-debug/runtimes/ubuntu.18.04-x64/native/: libzen.so.0
